# LLMrouter

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: models.example.yaml  models.yaml
contracts/: llmrouter.contract.json
docs/: CLINE_SETUP.md  CROSS_REPOSITORY_CI.md  DEVELOPMENT_PLAN_TDD.md  MODEL_TOKEN_LIMITS.md  PRECOG_LLMROUTER_INTEGRATION.md  PRECOG_MEMORY_BACKEND.md  ROADMAP.md  ROLL_FEATURE_DESIGN.md
src/llmrouter/: __init__.py  cli_panel.py  config.py  contract_publisher.py  cross_repository.py  logging_config.py  main.py  memory.py  precog.py  runtime.py  utils.py
src/llmrouter/api/: __init__.py  routes.py
src/llmrouter/core/: __init__.py  benchmark_scorer.py  cache.py  cooldown.py  health.py  proxy.py  registry.py  router.py  scorer.py  semantic_scorer.py  stats.py  types.py
src/llmrouter/evaluator/: __init__.py  collector.py  feedback.py  grader.py  judge.py  synthetic.py  types.py
tests/: conftest.py  test_api.py  test_api_helpers.py  test_benchmark_scorer.py  test_cache.py  test_cli_panel.py  test_cli_panel_full.py  test_contract_publisher.py  test_cross_repository.py  test_deepseek_provider.py  test_evaluator.py  test_evaluator_full.py  test_health.py  test_main_cli.py  test_memory.py  test_misc_providers.py  test_ollama_runtime.py  test_openai_compatible.py  test_provider_cooldown.py  test_proxy.py  test_registry_loader.py  test_rollout.py  test_router.py  test_runtime_feedback.py  test_semantic_scorer.py  test_stats.py  test_streaming.py
(+9 files in other folders)
