[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmrouter"
version = "0.1.0"
description = "LLM Auto-Router Proxy/Gateway with multi-model routing and self-evaluation"
requires-python = ">=3.11"
authors = [{ name = "Eduardo Pezzi" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "prometheus-client>=0.20.0",
    "openai>=1.30.0",
    "google-generativeai>=0.7.0",
    "ollama>=0.2.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "httpx-ws>=0.5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[project.scripts]
llmrouter = "llmrouter.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --cov=llmrouter --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4"]
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
